--- a/css/photographer.css
+++ b/css/photographer.css
@@ -80,12 +80,46 @@ form input {
 
 /* section display media  */
 
+.section-work {
+    margin-top: 2em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    padding: 2em;
+    gap: 2em;
+}
+
+.photographer-work {
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 .media-picture {
-    width: 100px;
-    height: auto;
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
 }
 
 .media-video {
-    width: 500px;
-    height: auto;
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+}
+
+.photographer-work-main-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.section-info {
+    background: #DB8876;
+    display: flex;
+    gap: 2em;
+    padding: 1em;
+    position: fixed;
+    bottom: 0;
+    right: 1em;
 }
