--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,35 @@
-.photographer_section {
+body {
+    font-family: "DM Sans", sans-serif;
+    margin: 0;
+}
+
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 90px;
+}
+
+h1 {
+    color: #901C1C;
+    margin-right: 100px;
+}
+
+.logo {
+    height: 50px;
+    margin-left: 100px;
+}
+
+.photographer-section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
     margin-top: 100px;
 }
 
-.card {
+.photographer-section article {
     justify-self: center;
     display: flex;
     justify-content: center;
@@ -13,40 +37,59 @@
     flex-direction: column;
 }
 
-.card > * {
-    margin: 0;
-    padding: 0;
+.photographer-section article h2 {
+    color: #D3573C;
+    font-size: 36px;
 }
 
-.card-img {
+.photographer-section article img {
+    height: 200px;
+    width: 200px;
+}
+
+
+
+/* cards */
+.photographer-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 70px;
+    margin-top: 100px;
+}
+
+.photographer-profile-img {
     height: 200px;
     width: 200px;
     border-radius: 50%;
     object-fit: cover;
 }
 
-
-.card-title {
+.photographer-name {
     color: #D3573C;
     font-size: 36px;
     margin-top: 20px;
     margin-bottom: 5px;
+    width: 100%;
+    text-align: center;
 }
 
-.card-location {
+.photographer-location {
     color: #901C1C;
     margin-bottom: 5px;
 }
 
-.card-description {
+.photographer-motto {
     margin-bottom: 5px;
 }
 
-.card-price {
+.photographer-price {
     color: #757575;
     font-size: 12px;
 }
 
-.card-link {
+.photographer-link {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     text-decoration: none;
 }
