--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,7 +1,3 @@
-#contact_modal {
-    display: none;
-}
-
 .photograph-header {
     display: flex;
     justify-content: space-around;
@@ -25,59 +21,6 @@
     align-self: center;
 }
 
-.modal {
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-    margin: auto;
-}
-
-.modal header {
-    justify-content: space-between;
-    width: 100%;
-}
-
-.modal header img {
-    cursor: pointer;
-}
-
-.modal header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
-}
-
-form {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-form label {
-    color: #312E2E;
-    font-size: 36px;
-}
-
-form div {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: self-start;
-    margin-bottom: 26px;
-}
-
-form input {
-    width: 100%;
-    height: 68px;
-    border: none;
-    border-radius: 5px;
-}
 
 /* section display media  */
 
@@ -174,10 +117,6 @@ h1 {
     width: 200px;
 }
 
-#contact_modal {
-    display: none;
-}
-
 
 .contact_button {
     font-size: 20px;
@@ -218,60 +157,6 @@ h1 {
     object-fit: cover;
 }
 
-.modal {
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-    margin: auto;
-}
-
-.modal header {
-    justify-content: space-between;
-    width: 100%;
-}
-
-.modal header img {
-    cursor: pointer;
-}
-
-.modal header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
-}
-
-form {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-form label {
-    color: #312E2E;
-    font-size: 36px;
-}
-
-form div {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: self-start;
-    margin-bottom: 26px;
-}
-
-form input {
-    width: 100%;
-    height: 68px;
-    border: none;
-    border-radius: 5px;
-}
-
 /* section display media  */
 
 .section-work {
@@ -299,12 +184,14 @@ form input {
 .photo__details {
     padding-top: 0.5em;
 }
+
 .photographer-work-container-like {
     display: flex;
     align-items: center;
     gap: 0.5em;
     color: #901C1C;
 }
+
 .photo__title-text {
     color: #901C1C;
 
@@ -342,3 +229,8 @@ form input {
     cursor: pointer;
 }
 
+textarea {
+    resize: none;
+    width: 100%;
+    min-height: 150px;
+}
