--- a/css/modal.css
+++ b/css/modal.css
@@ -10,6 +10,7 @@
 }
 
 .modal {
+    position: relative;
     border-radius: 5px;
     background-color: #DB8876;
     display: flex;
@@ -23,16 +24,21 @@
 .modal header {
     justify-content: space-between;
     width: 100%;
+    margin-bottom: 5px;
 }
 
 .modal header img {
     cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 .modal header h2 {
-    font-size: 64px;
+    font-size: 44px;
     font-weight: normal;
     text-align: center;
+    margin: 0;
 }
 
 form {
@@ -44,6 +50,7 @@ form {
 form label {
     color: #312E2E;
     font-size: 36px;
+    margin-top: 5px;
 }
 
 form div {
@@ -56,7 +63,7 @@ form div {
 
 form input {
     width: 100%;
-    height: 68px;
+    height: 50px;
     border: none;
     border-radius: 5px;
 }
