--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -34,6 +34,8 @@
     font-weight: bold;
     color: #fff;
     cursor: pointer;
+    border: none;
+    background: none;
   }
   
   .prev,
@@ -45,6 +47,8 @@
     color: #fff;
     cursor: pointer;
     user-select: none;
+    border: none;
+    background: none;
   }
   
   .prev {
