--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -6,7 +6,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: white;
     overflow: auto;
     text-align: center;
   }
@@ -32,7 +32,7 @@
     right: 20px;
     font-size: 40px;
     font-weight: bold;
-    color: #fff;
+    color: #901C1C;
     cursor: pointer;
     border: none;
     background: none;
@@ -44,7 +44,7 @@
     top: 50%;
     font-size: 40px;
     font-weight: bold;
-    color: #fff;
+    color: #901C1C;
     cursor: pointer;
     user-select: none;
     border: none;
@@ -63,7 +63,15 @@
     width: 50%;
   }
 
-  /* test */
+  .lightbox-text {
+    position: absolute;
+    width: 100%;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    color: #901C1C
+  }
 
   .lightbox-open {
     display: flex;
@@ -75,7 +83,7 @@
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: white;
   }
   
   .lightbox-img-open {
