--- a/css/photographer.css
+++ b/css/photographer.css
@@ -40,11 +40,6 @@
     flex-wrap: wrap;
 }
 
-.photo {
-    object-fit: cover;
-    width: 100%;
-    height: 300px;
-}
 
 .media-video {
     object-fit: cover;
@@ -179,6 +174,10 @@ h1 {
     object-fit: cover;
     width: 100%;
     height: 300px;
+}
+
+.photo:hover {
+    cursor: pointer;
 }
 
 .photo__details {
